--- a/src/App.css
+++ b/src/App.css
@@ -5,37 +5,9 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
 .card {
-  min-width: 10vw;
-  min-height: 5vh;
+  min-width: 15vw;
+  min-height: 10vh;
   background-color: #1a1a1a;
   border-radius: 8px;
   border: 1px solid transparent;
@@ -44,11 +16,12 @@
   transition: filter 0.25s;
   filter: drop-shadow(0 0 0.25em #646cffaa);
   cursor: pointer;
+  color: rgba(255, 255, 255, 0.87);
 }
 .card:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 .card img {
-  max-width: 5vw;
-  max-height: 5vh;
+  max-width: 10vw;
+  max-height: 10vh;
 }
