--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,6 @@
   text-align: center;
 }
 .card {
-  min-width: 15vw;
-  min-height: 10vh;
   background-color: #1a1a1a;
   border-radius: 8px;
   border: 1px solid transparent;
@@ -21,6 +19,7 @@
   filter: drop-shadow(0 0 0.25em #646cffaa);
   cursor: pointer;
   color: rgba(255, 255, 255, 0.87);
+  width: 250px;
 }
 .card:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
