--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,10 @@
 }
 
 .card-container {
-  place-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
